fixed alignment

--- a/src/components/timer.css
+++ b/src/components/timer.css
@@ -1,69 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
 
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+ .shadow {
+  
+  box-shadow:
+    2.8px 2.8px 2.2px rgba(0, 0, 0, 0.015),
+    6.7px 6.7px 5.3px rgba(0, 0, 0, 0.025),
+    12.5px 12.5px 10px rgba(0, 0, 0, 0.032),
+    22.3px 22.3px 17.9px rgba(0, 0, 0, 0.039),
+    41.8px 41.8px 33.4px rgba(0, 0, 0, 0.049),
+    100px 100px 80px rgba(0, 0, 0, 0.07)
+  ;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-body {
-  background-color: #1e212d;
-  color: #eabf9f;
-  height: 100vh;
-  font-family: "Roboto Mono", monospace;
-}
-
-#root {
-  height: 100%;
-}
-
-.App {
-  display: flex;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-}
-
-.pomodoro {
-  font-size: 6em;
-  margin: 0 auto;
-}
-
-.message {
-  font-size: 0.5em;
-  min-height: 1.3em;
-  margin-bottom: 0.5em;
-}
